--- a/index.html
+++ b/index.html
@@ -1,76 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebXR AR Sample</title>
-    <style>
-        body { margin: 0; }
-        canvas { display: block; }
-    </style>
+    <title>3DモデルとAR表示</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script>
-        // Check if WebXR is supported
-        if (navigator.xr) {
-            navigator.xr.requestSession('immersive-ar', {
-                requiredFeatures: ['hit-test']
-            }).then(onSessionStarted).catch(err => {
-                console.error('Failed to start AR session:', err);
-            });
-        } else {
-            alert('WebXR is not supported on this device');
-        }
 
-        async function onSessionStarted(session) {
-            const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            renderer.xr.enabled = true;
-            renderer.xr.setReferenceSpaceType('local');
-            document.body.appendChild(renderer.domElement);
+    <h1>3Dモデルを表示し、ARで見る</h1>
 
-            const scene = new THREE.Scene();
-            const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.01, 20);
+    <model-viewer src="path/to/your-model.glb" 
+                  alt="3D Model" 
+                  auto-rotate 
+                  camera-controls 
+                  ar 
+                  ar-modes="scene-viewer" 
+                  shadow-intensity="1" 
+                  exposure="0.9" 
+                  style="width: 100%; height: 500px;">
+    </model-viewer>
 
-            // Light
-            const light = new THREE.DirectionalLight(0xffffff, 1);
-            light.position.set(1, 1, 1).normalize();
-            scene.add(light);
-
-            // Add a sample 3D object (a cube)
-            const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
-            const material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
-            const cube = new THREE.Mesh(geometry, material);
-            scene.add(cube);
-
-            const controller = renderer.xr.getController(0);
-            scene.add(controller);
-
-            session.requestReferenceSpace('local').then((refSpace) => {
-                session.requestAnimationFrame(onXRFrame);
-
-                function onXRFrame(time, frame) {
-                    session.requestAnimationFrame(onXRFrame);
-
-                    const pose = frame.getViewerPose(refSpace);
-                    if (pose) {
-                        // Ensure the camera's aspect ratio is correct
-                        camera.aspect = window.innerWidth / window.innerHeight;
-                        camera.updateProjectionMatrix();
-
-                        // Update camera position
-                        const { position } = pose.transform;
-                        camera.position.set(position.x, position.y, position.z);
-                        camera.updateMatrixWorld(true);
-
-                        // Render the scene
-                        renderer.render(scene, camera);
-                    }
-                }
-            });
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.139.2/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.139.2/examples/js/WebXR.js"></script>
 </body>
 </html>
